project(examples_native_tester)
find_package(eosio.cdt)
# add_native_executable(ncomplexsingle ncomplexsingle.cpp)
# add_native_executable(ncomplexmultiple ncomplexmultiple.cpp)
# add_native_executable(addressbookn2 addressbookn2.cpp)
add_native_executable(ncomplexsecondary complexsecondary/ncomplexsecondary.cpp)
add_native_executable(ncomplexsingle complexsingle/ncomplexsingle.cpp)
